--- a/Shared (Extension)/Resources/manifest.json
+++ b/Shared (Extension)/Resources/manifest.json
@@ -21,12 +21,19 @@
 
     "content_scripts": [{
         "js": [ "content.js" ],
-        "matches": [ "*://example.com/*" ]
+        "matches": [
+            "https://www.meta.ai/*",
+            "https://gemini.google.com/*",
+            "https://chatgpt.com/*",
+            "https://chat.deepseek.com/*",
+            "https://copilot.microsoft.com/*",
+            "https://x.com/i/grok/*"
+        ]
     }],
 
     "action": {
         "default_popup": "popup.html",
-        "default_icon": "images/toolbar-icon.svg"
+        "default_icon": "images/icon-256.png"
     },
 
     "permissions": [ ]
